Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57927

Setting QWaylandQuickItem::visible to false while touching the client does not generate a wl_touch.up event

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 2
    • 5.8.0 RC
    • QPA: Wayland
    • None

    Description

      Our QML compositors don't send wl_touch.up if the client is hidden while it is being touched.

      The result is that clients may become unresponsive because they are still waiting for the event.

      To reproduce:

      1. Start the attached no-touchup-compositor.qml using qmlscene and WAYLAND_DEBUG set to 1.
      2. Start any wayland client.
      3. Touch and hold on the client
      4. Tap the compositor background while still holding on the client. The client is hidden.
      5. Tap the compositor background again, the client should now become visible again.

      Observe that no wl_touch.up event was sent. Further interaction will generate touch up and touch down events, but that first touch up is never sent.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes