Send touch cancel event when QWaylandQuickItem::visible is set to false

Task-number: QTBUG-57927
Change-Id: I8b6a5aaa9337222286382ffbeee13b794bec125c
Reviewed-by: Jan Arne Petersen <jan.petersen@kdab.com>
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>